# gerrit-argo-gateway

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  rundocker.sh
argo/: example-web.yaml  example-wt.yaml
src/gerrit_argo_gateway/: __init__.py  __main__.py
