[project]
name = "gerrit-argo-gateway"
version = "0.0.1"
description = ""
authors = [
    {name = "Fabian Wiesel", email = "fabian.wiesel@sap.com"},
]
dependencies = [
    "asyncssh>=2.14.1",
    "httpx>=0.25.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache 2.0"}

[project.scripts]
gerrit-argo-gateway = "gerrit_argo_gateway:func"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN002", "ANN003", "ANN101", "ANN102", # Plain stupid busywork
          "D203", "D212",       # Superseeded by other conflicting rules
          "ISC001", "COM812",   # ruff fmt doesn't like them
          ]
